timeware/src/objects/Rounding_Policy__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lunch_In_Direction__c</fullName>
        <label>Lunch In Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Forward</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Backward</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lunch_Out_Direction__c</fullName>
        <label>Lunch Out Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Backward</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Forward</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Round_Lunch_Punch__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Round Lunch Punch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rounding_Applied_To__c</fullName>
        <description>How is rounding applied?  It can be applied to each Punch or calculated Hours.  Default is Punch.</description>
        <label>Rounding Applied To</label>
        <picklist>
            <picklistValues>
                <fullName>Punch</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rounding_In_Direction__c</fullName>
        <description>Direction a punch is rounded.  Default is Forward.</description>
        <label>Rounding In Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Forward</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Backward</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rounding_Out_Direction__c</fullName>
        <description>Direction punch gets rounded. Default is Backward.</description>
        <label>Rounding Out Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Backward</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Forward</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rounding_Policy_Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rounding_Policy__c</fullName>
        <description>Rounding policy options are Quarter, Tenth and Actual.  Default is Quarter.</description>
        <label>Rounding Policy</label>
        <picklist>
            <picklistValues>
                <fullName>Quarter</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tenth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rounding_Type__c</fullName>
        <description>Indicates type of rounding: Standard or Full.  Default is Standard.</description>
        <label>Rounding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transfer_Direction__c</fullName>
        <label>Transfer Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Forward</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Backward</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Rounding Policy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Rounding Policy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rounding Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>